payment connect with reservation data model